--- a/AdapterRemoval.1
+++ b/AdapterRemoval.1
@@ -1,6 +1,6 @@
 .\" Man page generated from reStructuredText.
 .
-.TH "ADAPTERREMOVAL" "1" "Oct 01, 2017" "2.2.2" "AdapterRemoval"
+.TH "ADAPTERREMOVAL" "1" "Jan 22, 2019" "2.2.3" "AdapterRemoval"
 .SH NAME
 AdapterRemoval \- Fast short-read adapter trimming and processing
 .
@@ -153,8 +153,7 @@ Output file to which containing paired reads for which the mate has been discard
 .INDENT 0.0
 .TP
 .B \-\-outputcollapsed file
-If –collapsed is set, contains overlapping mate\-pairs which have been merged into a single read (PE mode) or reads for which the adapter was identified by a minimum overlap, indicating that the entire template molecule is present. This does not include which have subsequently been trimmed due to low\-quality or ambiguous nucleotides. Default filename is
-‘basename.collapsed’
+If –collapsed is set, contains overlapping mate\-pairs which have been merged into a single read (PE mode) or reads for which the adapter was identified by a minimum overlap, indicating that the entire template molecule is present. This does not include which have subsequently been trimmed due to low\-quality or ambiguous nucleotides. Default filename is ‘basename.collapsed’
 .UNINDENT
 .INDENT 0.0
 .TP
